--- a/authors.html
+++ b/authors.html
@@ -7,10 +7,98 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/app.css">
 
     <title>XML | JavaScript AJAX</title>
   </head>
   <body>
+    <!-- NAVBAR
+    ---------------->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">AJAX</a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerClient" aria-controls="navbarTogglerClient" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="icon-bar top-bar"></span>
+      	<span class="icon-bar middle-bar"></span>
+      	<span class="icon-bar bottom-bar"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerClient">
+        <!-- Menú Esquerra -->
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Llibres <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="authors.html">Autors</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">APIS</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="flickr.html">Flickr</a>
+              <a class="dropdown-item" href="maps.html">Google Maps</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- CONTINGUT
+    ---------------->
+    <main id="contingut" class="my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>XML (JavaScript)</h1>
+            <h2>Informació autors</h2>
+            <p>Mostrar informació dels autors partint d'un fitxer .xml.</p>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </main>
+
+    <!-- FOOTER
+    ---------------->
+    <footer class="bigfoot bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg" id="footer-navigation">
+            <ul class="nav justify-content-left hidden-md-down">
+              <li class="nav-item active"><a class="nav-link" href="index.html">Llibres</a></li>
+              <li class="nav-item "><a class="nav-link" href="authors.html">Autors</a></li>
+            </ul>
+            <ul class="nav justify-content-center hidden-xs-down hidden-lg-up">
+              <li class="nav-item active"><a class="nav-link" href="index.html">Llibres</a></li>
+              <li class="nav-item "><a class="nav-link" href="authors.html">Autors</a></li>
+            </ul>
+            <ul class="nav flex-column hidden-sm-up text-center">
+              <li class="nav-item active"><a class="nav-link" href="index.html">Llibres</a></li>
+              <li class="nav-item "><a class="nav-link" href="authors.html">Autors</a></li>
+            </ul>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+        <hr/>
+        <div class="row" id="footer-copyright">
+          <div class="col-lg" id="footer-social">
+            <ul class="list-inline">
+            <li class="list-inline-item">
+              <a title="Twtter" href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a title="Facebook" href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            </li>
+            </ul>
+          </div><!-- /.col -->
+          <div class="col-lg" id="copyright-owner">
+            <p>Copyright &copy; 2018 Grup 1, DAW; Institut Montsià, Amposta. Tots els drets reservats.</p>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+        <div class="row">
+          <div class="col-lg" id="copyright-designer">
+            <hr>
+            <p><small>Dissenyat per Jordi Simó, Enric Beltran i Roger Forner</small>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
