--- a/authors.html
+++ b/authors.html
@@ -27,6 +27,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Llibres <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="relats.html">Llistar relats</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="authors.html">Autors</a>
           </li>
