--- a/flickr.html
+++ b/flickr.html
@@ -28,6 +28,9 @@
             <a class="nav-link" href="index.html">Llibres</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="relats.html">Llistar relats</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="authors.html">Autors</a>
           </li>
           <li class="nav-item dropdown active">
