Fent apartat llibres

--- a/index.html
+++ b/index.html
@@ -50,17 +50,68 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>.txt (JavaScript)</h1>
-            <h2>Llibres (versió llarga (comprat) i curta)</h2>
-            <p>Mostrar el .txt curt (short) per defecte i el .txt llarg quan s'hagi realitzat una compra simulada.</p>
-
-            <h2>Formulari (modal)</h2>
-            <p>Afegir un formulari de compra en un modal. Validar la compra?</p>
-
-            <!-- Botó modals -->
-            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
-              Formulari
-            </button>
+            <h1>Llibres</h1>
+            <div class="card-deck">
+              <!-- Llibre -->
+              <div class="card">
+                <img class="card-img-top" src="https://source.unsplash.com/w7oxd0tzWWs/250x250" alt="From unsplash.com by @sgabriel">
+                <div class="card-body">
+                  <!-- Títol -->
+                  <h5 class="card-title">Gulliver's Travels</h5>
+                  <!-- Descripció -->
+                  <p class="card-text text-justify">Gulliver's Travels was published in 1726; and, although it was by no means intended for them, the book was soon appropriated by the children, who have ever since continued to regard it as one of the most delightful of their story books.</p>
+                  <!-- Botó modals -->
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                    Resum
+                  </button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                    Comprar
+                  </button>
+                </div>
+              </div><!-- /.card -->
+              <!-- Llibre -->
+              <div class="card">
+                <img class="card-img-top" src="https://source.unsplash.com/kaEhf0eZme8/250x250" alt="From unsplash.com by @nilshuber">
+                <div class="card-body">
+                  <!-- Títol -->
+                  <h5 class="card-title">Time and the Gods</h5>
+                  <!-- Descripció -->
+                  <p class="card-text text-justify">These tales are of the things that befell gods and men in Yarnith, Averon, and Zarkandhu, and in the other countries of my dreams.</p>
+                  <!-- Botó modals -->
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                    Comprar
+                  </button>
+                </div>
+              </div><!-- /.card -->
+              <!-- Llibre -->
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                  <!-- Títol -->
+                  <h5 class="card-title">Títol</h5>
+                  <!-- Descripció -->
+                  <p class="card-text text-justify">Descripció</p>
+                  <!-- Botó modals -->
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                    Comprar
+                  </button>
+                </div>
+              </div><!-- /.card -->
+              <!-- Llibre -->
+              <div class="card">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                  <!-- Títol -->
+                  <h5 class="card-title">Títol</h5>
+                  <!-- Descripció -->
+                  <p class="card-text text-justify">Descripció</p>
+                  <!-- Botó modals -->
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                    Comprar
+                  </button>
+                </div>
+              </div><!-- /.card -->
+            </div><!-- /.card-columns -->
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
