Definim llargada de descripció llibres

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <!-- Títol -->
                   <h5 class="card-title">Gulliver's Travels</h5>
                   <!-- Descripció -->
-                  <p class="card-text text-justify">Gulliver's Travels was published in 1726; and, although it was by no means intended for them, the book was soon appropriated by the children, who have ever since continued to regard it as one of the most delightful of their story books.</p>
+                  <p class="card-text text-justify">Gulliver's Travels was published in 1726; and, although it was by no means intended for them, the book was soon appropriated by...</p>
                   <!-- Botó modals -->
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
                     Resum
