Imatges i descripcions Ok

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <div class="card-body">
                   <!-- Títol -->
                   <h5 class="card-title">Gulliver's Travels</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Jonathan Swift</h6>
                   <!-- Descripció -->
                   <p class="card-text text-justify">Gulliver's Travels was published in 1726; and, although it was by no means intended for them, the book was soon appropriated by...</p>
                   <!-- Botó modals -->
@@ -75,6 +76,7 @@
                 <div class="card-body">
                   <!-- Títol -->
                   <h5 class="card-title">Time and the Gods</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Lord Dunsany</h6>
                   <!-- Descripció -->
                   <p class="card-text text-justify">These tales are of the things that befell gods and men in Yarnith, Averon, and Zarkandhu, and in the other countries of my dreams.</p>
                   <!-- Botó modals -->
@@ -85,12 +87,13 @@
               </div><!-- /.card -->
               <!-- Llibre -->
               <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="https://source.unsplash.com/X41ESB_jOlo/250x250" alt="From unsplash.com by @yenesa2012">
                 <div class="card-body">
                   <!-- Títol -->
-                  <h5 class="card-title">Títol</h5>
+                  <h5 class="card-title">A Princess of Mars</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">Edgar Rice Burroughs</h6>
                   <!-- Descripció -->
-                  <p class="card-text text-justify">Descripció</p>
+                  <p class="card-text text-justify">In submitting Captain Carter's strange manuscript to you in book form, I believe that a few words relative to this remarkable personality will...</p>
                   <!-- Botó modals -->
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
                     Comprar
@@ -99,12 +102,13 @@
               </div><!-- /.card -->
               <!-- Llibre -->
               <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="https://source.unsplash.com/QYs58HmCz-s/250x250" alt="From unsplash.com by @tertia">
                 <div class="card-body">
                   <!-- Títol -->
-                  <h5 class="card-title">Títol</h5>
+                  <h5 class="card-title">The War of the Worlds</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">H. G. Wells</h6>
                   <!-- Descripció -->
-                  <p class="card-text text-justify">Descripció</p>
+                  <p class="card-text text-justify">No one would have believed in the last years of the nineteenth century that this world was being watched keenly and closely by...</p>
                   <!-- Botó modals -->
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
                     Comprar
