Modals Ok :bookmark:

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                   <!-- Descripció -->
                   <p class="card-text text-justify">Gulliver's Travels was published in 1726; and, although it was by no means intended for them, the book was soon appropriated by...</p>
                   <!-- Botó modals -->
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalGulliver">
                     Resum
                   </button>
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
                     Comprar
                   </button>
                 </div>
@@ -80,7 +80,10 @@
                   <!-- Descripció -->
                   <p class="card-text text-justify">These tales are of the things that befell gods and men in Yarnith, Averon, and Zarkandhu, and in the other countries of my dreams.</p>
                   <!-- Botó modals -->
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalTime">
+                    Resum
+                  </button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
                     Comprar
                   </button>
                 </div>
@@ -95,7 +98,10 @@
                   <!-- Descripció -->
                   <p class="card-text text-justify">In submitting Captain Carter's strange manuscript to you in book form, I believe that a few words relative to this remarkable personality will...</p>
                   <!-- Botó modals -->
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalA">
+                    Resum
+                  </button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
                     Comprar
                   </button>
                 </div>
@@ -110,7 +116,10 @@
                   <!-- Descripció -->
                   <p class="card-text text-justify">No one would have believed in the last years of the nineteenth century that this world was being watched keenly and closely by...</p>
                   <!-- Botó modals -->
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModal">
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalThe">
+                    Resum
+                  </button>
+                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
                     Comprar
                   </button>
                 </div>
@@ -123,7 +132,8 @@
 
     <!-- MODALS
     ---------------->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Formulari -->
+    <div class="modal fade" id="exampleModalFormulari" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -138,6 +148,86 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel·lar</button>
             <button type="button" class="btn btn-dark">Pagar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Gulliver's Travels -->
+    <div class="modal fade" id="exampleModalGulliver" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Gulliver's Travels</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h6>Resum</h6>
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Time and the Gods -->
+    <div class="modal fade" id="exampleModalTime" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Time and the Gods</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h6>Resum</h6>
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- A Princess of Mars -->
+    <div class="modal fade" id="exampleModalA" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">A Princess of Mars</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h6>Resum</h6>
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- The War of the Worlds -->
+    <div class="modal fade" id="exampleModalThe" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">The War of the Worlds</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <h6>Resum</h6>
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
           </div>
         </div>
       </div>
