Mostrar Resum Relats Ok
Hi ha un petit problema amb els salts de línia.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="modal-body">
             <h6>Resum</h6>
-            ...
+            <span id="resumGulliver"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
@@ -184,7 +184,7 @@
           </div>
           <div class="modal-body">
             <h6>Resum</h6>
-            ...
+            <span id="resumTime"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
@@ -204,7 +204,7 @@
           </div>
           <div class="modal-body">
             <h6>Resum</h6>
-            ...
+            <span id="resumPrincess"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
@@ -224,7 +224,7 @@
           </div>
           <div class="modal-body">
             <h6>Resum</h6>
-            ...
+            <span id="resumWorlds"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
@@ -283,5 +283,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Activitat -->
+    <script src="assets/js/llibres.js" charset="utf-8"></script>
   </body>
 </html>
