--- a/relats.html
+++ b/relats.html
@@ -30,7 +30,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="relats.html">Llistar relats <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="authors.html">Autors</a>
           </li>
           <li class="nav-item dropdown">
