Mida modals i movem botó Comprar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="row">
           <div class="col">
             <h1>Llibres</h1>
+            <button type="button" class="btn btn-dark btn-lg btn-block my-3" data-toggle="modal" data-target="#exampleModalFormulari">
+              Comprar
+            </button>
             <div class="card-deck">
               <!-- Llibre -->
               <div class="card">
@@ -64,9 +67,6 @@
                   <!-- Botó modals -->
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalGulliver">
                     Resum
-                  </button>
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
-                    Comprar
                   </button>
                 </div>
               </div><!-- /.card -->
@@ -83,9 +83,6 @@
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalTime">
                     Resum
                   </button>
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
-                    Comprar
-                  </button>
                 </div>
               </div><!-- /.card -->
               <!-- Llibre -->
@@ -100,9 +97,6 @@
                   <!-- Botó modals -->
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalA">
                     Resum
-                  </button>
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
-                    Comprar
                   </button>
                 </div>
               </div><!-- /.card -->
@@ -119,9 +113,6 @@
                   <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalThe">
                     Resum
                   </button>
-                  <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalFormulari">
-                    Comprar
-                  </button>
                 </div>
               </div><!-- /.card -->
             </div><!-- /.card-columns -->
@@ -134,7 +125,7 @@
     ---------------->
     <!-- Formulari -->
     <div class="modal fade" id="exampleModalFormulari" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class=" modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Pagament</h5>
@@ -154,7 +145,7 @@
     </div>
     <!-- Gulliver's Travels -->
     <div class="modal fade" id="exampleModalGulliver" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class=" modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Gulliver's Travels</h5>
@@ -174,7 +165,7 @@
     </div>
     <!-- Time and the Gods -->
     <div class="modal fade" id="exampleModalTime" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class=" modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Time and the Gods</h5>
@@ -194,7 +185,7 @@
     </div>
     <!-- A Princess of Mars -->
     <div class="modal fade" id="exampleModalA" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class=" modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">A Princess of Mars</h5>
@@ -214,7 +205,7 @@
     </div>
     <!-- The War of the Worlds -->
     <div class="modal fade" id="exampleModalThe" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class=" modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">The War of the Worlds</h5>
