--- a/index.html
+++ b/index.html
@@ -145,7 +145,14 @@
             </button>
           </div>
           <div class="modal-body">
-            <div id="form-messages"></div>
+            <!-- Missatge -->
+            <div id="form-missatge" class="alert alert-dismissible fade show" role="alert">
+
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <!-- Formulari -->
             <form id="ajax-form" method="post" action="mailer.php">
               <div class="form-row">
                 <div class="form-group col-md-6">
