Mostrar Text Llarg OK

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body scroll">
             <!-- Missatge -->
             <div id="form-missatge" class="alert alert-dismissible fade show" role="alert">
 
@@ -199,7 +199,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body scroll">
             <h6>Resum</h6>
             <span id="resumGulliver"></span>
           </div>
@@ -219,7 +219,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body scroll">
             <h6>Resum</h6>
             <span id="resumTime"></span>
           </div>
@@ -239,7 +239,7 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body scroll">
             <h6>Resum</h6>
             <span id="resumPrincess"></span>
           </div>
@@ -259,9 +259,30 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body scroll">
             <h6>Resum</h6>
             <span id="resumWorlds"></span>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Text llarg -->
+    <div class="modal fade" id="exampleModalTextLlarg" tabindex="-1" role="dialog" aria-labelledby="textLlarg" aria-hidden="true">
+      <div class=" modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="textLlarg"></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body scroll">
+            <span id="tipusTextLlarg" class="badge badge-secondary mb-2"></span>
+            <h6 id="autorTextLlarg"></h6>
+            <span id="cosTextLlarg" class="text-justify"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Tancar</button>
